--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             margin-bottom: 0px;
         }
 
+        .textoFooter{
+            margin: 0px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+
+        }
+
         html {
             scroll-behavior: smooth;
         }
@@ -216,7 +223,7 @@
         </div>
     </section>
 
-    <footer class="text-center" style="background-color:#666768;padding:0px; margin:0px">
+    <footer class="text-center corSecundaria textoFooter" style="background-color:#666768;padding:0px; margin:0px">
         <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Copyright 2018 - 2020
             Maria Rodrigues®
         </p>
