--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maria Rodrigues</title>
-    <link href="https://maryrl.github.io/myporf-lio/style.css" rel"stylesheet">
-       <link href="https://maryrl.github.io/myporf-lio/index.html">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://maryrl.github.io/myporf-lio/style.css" rel="stylesheet">
+     <link href="https://maryrl.github.io/myporf-lio/index.html">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
